добавила мобильную версию

--- a/index.html
+++ b/index.html
@@ -446,8 +446,8 @@
           <span class="button__text">Сохранить на память</span>
         </button>
       </div>
-      <div class="button modal-button">
-        <dialog id="modal" class="poput">
+      <!-- <div class="modal-button"> -->
+        <dialog id="modal" class="popup">
           <div class="popup-content">
 <svg
             class="floppy-svg floppy-big"
@@ -470,7 +470,7 @@
             </button>
           </form>
         </dialog>
-      </div>
+      <!-- </div> -->
     </footer>
     <script src="./scripts/like.js"></script>
   </body>
