--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body class="page">
     <header class="header">
-      <a class="header__logo">&lt/HTML&gt</a>
+      <a class="header__logo">&lt;/HTML&gt;</a>
       <h1 class="header__title">закрывающий тег</h1>
     </header>
     <main>
@@ -30,7 +30,7 @@
             loading="lazy"
             class="card-picture"
           >
-          <span class="card-label">&ltИнтерес&gt</span>
+          <span class="card-label">&lt;Интерес&gt;</span>
         </div>
         <div class="card__item-content">
           <p class="card-text">
@@ -41,12 +41,17 @@
           <p class="card-text">Станут ли новые знания будующим хобби...</p>
         </div>
         <div class="card__item-button">
-          <button class="card__icon-button" type="button">
+          <button
+            class="card__icon-button"
+            type="button"
+            aria-label="Поставить лайк"
+          >
             <svg
-              class="like-icon is-liked"
+              class="like-icon"
               viewBox="0 0 39 36"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
+              aria-hidden="true"
             >
               <g clip-path="url(#a)">
                 <g class="heart">
@@ -94,7 +99,7 @@
             loading="lazy"
             class="card-picture image-filter-contrast"
           >
-          <span class="card-label">&ltопасения&gt</span>
+          <span class="card-label">&lt;опасения&gt;</span>
         </div>
         <div class="card__item-content">
           <p class="card-text">
@@ -109,12 +114,17 @@
           </p>
         </div>
         <div class="card__item-button">
-          <button class="card__icon-button" type="button">
+          <button
+            class="card__icon-button"
+            type="button"
+            aria-label="Поставить лайк"
+          >
             <svg
-              class="like-icon is-liked"
+              class="like-icon"
               viewBox="0 0 39 36"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
+              aria-hidden="true"
             >
               <g clip-path="url(#a)">
                 <g class="heart">
@@ -161,7 +171,7 @@
             loading="lazy"
             class="card-picture image-filter-blur"
           >
-          <span class="card-label">&ltувлечение&gt</span>
+          <span class="card-label">&lt;увлечение&gt;</span>
         </div>
         <div class="card__item-content">
           <p class="card-text">
@@ -172,12 +182,17 @@
           <p class="card-text">Надо сделать шаг, что бы дорога появилась.</p>
         </div>
         <div class="card__item-button">
-          <button class="card__icon-button" type="button">
+          <button
+            class="card__icon-button"
+            type="button"
+            aria-label="Поставить лайк"
+          >
             <svg
-              class="like-icon is-liked"
+              class="like-icon"
               viewBox="0 0 39 36"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
+              aria-hidden="true"
             >
               <g clip-path="url(#a)">
                 <g class="heart">
@@ -224,7 +239,7 @@
             loading="lazy"
             class="card-picture image-filter-grayscale"
           >
-          <span class="card-label">&ltудивление&gt</span>
+          <span class="card-label">&lt;удивление&gt;</span>
         </div>
         <div class="card__item-content">
           <p class="card-text">
@@ -237,12 +252,17 @@
           <p class="card-text">Какой смысл, если не сделать идеально?</p>
         </div>
         <div class="card__item-button">
-          <button class="card__icon-button" type="button">
+          <button
+            class="card__icon-button"
+            type="button"
+            aria-label="Поставить лайк"
+          >
             <svg
-              class="like-icon is-liked"
+              class="like-icon"
               viewBox="0 0 39 36"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
+              aria-hidden="true"
             >
               <g clip-path="url(#a)">
                 <g class="heart">
@@ -289,7 +309,7 @@
             loading="lazy"
             class="card-picture image-filter-saturate"
           >
-          <span class="card-label">&ltподдержка&gt</span>
+          <span class="card-label">&lt;поддержка&gt;</span>
         </div>
         <div class="card__item-content">
           <p class="card-text">
@@ -306,12 +326,17 @@
           </p>
         </div>
         <div class="card__item-button">
-          <button class="card__icon-button" type="button">
+          <button
+            class="card__icon-button"
+            type="button"
+            aria-label="Поставить лайк"
+          >
             <svg
-              class="like-icon is-liked"
+              class="like-icon"
               viewBox="0 0 39 36"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
+              aria-hidden="true"
             >
               <g clip-path="url(#a)">
                 <g class="heart">
@@ -349,7 +374,6 @@
           </button>
         </div>
       </article>
-
       <article class="card__item">
         <h2 class="card__item-title">3 спринт: Обходные стратегии</h2>
         <div class="card__item-image">
@@ -359,7 +383,7 @@
             loading="lazy"
             class="card-picture image-filter-hue-rotate"
           >
-          <span class="card-label">&ltоживление&gt</span>
+          <span class="card-label">&lt;оживление&gt;</span>
         </div>
         <div class="card__item-content">
           <p class="card-text">
@@ -372,12 +396,17 @@
           </p>
         </div>
         <div class="card__item-button">
-          <button class="card__icon-button" type="button">
+          <button
+            class="card__icon-button"
+            type="button"
+            aria-label="Поставить лайк"
+          >
             <svg
-              class="like-icon is-liked"
+              class="like-icon"
               viewBox="0 0 39 36"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
+              aria-hidden="true"
             >
               <g clip-path="url(#a)">
                 <g class="heart">
@@ -424,7 +453,7 @@
             loading="lazy"
             class="card-picture image-filter-sepia"
           >
-          <span class="card-label">&ltвосхищение&gt</span>
+          <span class="card-label">&lt;восхищение&gt;</span>
         </div>
         <div class="card__item-content">
           <p class="card-text">
@@ -437,12 +466,17 @@
           <p class="card-text">Надо искать радости в мелочах.</p>
         </div>
         <div class="card__item-button">
-          <button class="card__icon-button" type="button">
+          <button
+            class="card__icon-button"
+            type="button"
+            aria-label="Поставить лайк"
+          >
             <svg
-              class="like-icon is-liked"
+              class="like-icon"
               viewBox="0 0 39 36"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
+              aria-hidden="true"
             >
               <g clip-path="url(#a)">
                 <g class="heart">
@@ -489,7 +523,7 @@
             loading="lazy"
             class="card-picture image-filter-multiple"
           >
-          <span class="card-label">&ltвосторг&gt</span>
+          <span class="card-label">&lt;восторг&gt;</span>
         </div>
         <div class="card__item-content">
           <p class="card-text">
@@ -503,12 +537,17 @@
           <p class="card-text">Нет без конца начала и нет начала без конца.</p>
         </div>
         <div class="card__item-button">
-          <button class="card__icon-button" type="button">
+          <button
+            class="card__icon-button"
+            type="button"
+            aria-label="Поставить лайк"
+          >
             <svg
-              class="like-icon is-liked"
+              class="like-icon"
               viewBox="0 0 39 36"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
+              aria-hidden="true"
             >
               <g clip-path="url(#a)">
                 <g class="heart">
@@ -541,15 +580,13 @@
               </defs>
             </svg>
           </button>
-
           <button class="button card__like-button" type="button">
             <span class="button__text">Like</span>
           </button>
         </div>
       </article>
     </main>
-    <footer class="footer">
-      <div class="footer-button">
+    <div class="save">
         <button
           class="button save-button"
           type="button"
@@ -560,34 +597,32 @@
             class="floppy-svg"
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 40 40"
+            aria-hidden="true"
           >
             <use href="./svg/floppy.svg#icon-floppe"></use>
           </svg>
           <span class="button__text">Сохранить на память</span>
         </button>
-      </div>
       <dialog id="modal" class="popup">
         <div class="popup-content">
           <svg
             class="floppy-svg floppy-big"
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 40 40"
+            aria-hidden="true"
           >
             <use href="./svg/floppy.svg#icon-floppe"></use>
           </svg>
-          <p class="button__text">
-            Вставьте <br>
-            дискету, чтобы <br>
-            продолжить
-          </p>
+          <p class="button__text">Вставьте дискету, чтобы продолжить</p>
         </div>
-        <form>
+        <form method="dialog">
           <button class="button button-close" type="submit">
             <span class="button__text">ок</span>
           </button>
         </form>
       </dialog>
-    </footer>
+    </div>
     <script src="./scripts/like.js"></script>
   </body>
 </html>
+
